--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
+    "uuid": "^8.3.2",
     "dotenv": "^8.2.0"
   },
   "scripts": {
