--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.5.0",
     "mysql": "^2.18.1",
-    "uuid": "^8.3.2",
-    "dotenv": "^8.2.0"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "node app",
